--- a/main.html
+++ b/main.html
@@ -8,6 +8,50 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="container">
+    <h1 class="block-heading">Shopping Cart</h1>
+    <div class="row">
+      <div class="col-lg-8">
+        <div class="product">
+          <h2>Product 1</h2>
+          <div class="row">
+            <div class="col-md-4">
+              <img src="https://via.placeholder.com/150" class="img-fluid" alt="Product 1">
+            </div>
+            <div class="col-md-4">
+              <img src="https://via.placeholder.com/150" class="img-fluid" alt="Product 1">
+            </div>
+            <div class="col-md-4">
+              <img src="https://via.placeholder.com/150" class="img-fluid" alt="Product 1">
+            </div>
+          </div>
+        </div>
+        <div class="product">
+          <h2>Product 2</h2>
+          <div class="row">
+            <div class="col-md-4">
+              <img src="https://via.placeholder.com/150" class="img-fluid" alt="Product 2">
+            </div>
+            <div class="col-md-4">
+              <img src="https://via.placeholder.com/150" class="img-fluid" alt="Product 2">
+            </div>
+            <div class="col-md-4">
+              <img src="https://via.placeholder.com/150" class="img-fluid" alt="Product 2">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div class="summary">
+          <h2>Summary</h2>
+          <p>Total Price: $100</p>
+          <button>Checkout</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Bootstrap JS -->
+ 
     <script type="text/javascript" src="./script.js">
 </script>
 
