--- a/main.html
+++ b/main.html
@@ -1,49 +1,67 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bootstrap Shopping Cart</title>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <!-- Custom CSS -->
+  <style>
+    .headings {
+      color: #3b99e0;
+    }
 
+    .summary {
+      border-top: 1px solid #5ea4f3;
+      background-color: #f7fbff;
+      padding: 20px;
+      border-bottom: 1px solid #5ea4f3;
+    }
+
+    .summary button {
+      background-color: #3b99e0;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .product {
+      margin-bottom: 20px;
+    }
+
+    .block-heading {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+  </style>
+</head>
 <body>
-	<!-- the entire body must be written by student -->
-	<div class="container">
-    <h1 class="block-heading">Shopping Cart</h1>
+  <div class="container">
+    <h2 class="block-heading headings">Shopping Cart</h2>
     <div class="row">
       <div class="col-lg-8">
         <div class="product">
-          <h2>Product 1</h2>
+          <h4>Product 1</h4>
           <div class="row">
-            <div class="col-md-4">
-              <img src="https://via.placeholder.com/150" class="img-fluid" alt="Product 1">
+            <div class="col-md-6">
+              <img src="product1.jpg" alt="Product 1" class="img-fluid">
             </div>
-            <div class="col-md-4">
-              <img src="https://via.placeholder.com/150" class="img-fluid" alt="Product 1">
+            <div class="col-md-6">
+              <img src="product2.jpg" alt="Product 2" class="img-fluid">
             </div>
-            <div class="col-md-4">
-              <img src="https://via.placeholder.com/150" class="img-fluid" alt="Product 1">
+            <div class="col-md-6">
+              <img src="product3.jpg" alt="Product 3" class="img-fluid">
             </div>
           </div>
         </div>
-        <div class="product">
-          <h2>Product 2</h2>
-          <div class="row">
-            <div class="col-md-4">
-              <img src="https://via.placeholder.com/150" class="img-fluid" alt="Product 2">
-            </div>
-            <div class="col-md-4">
-              <img src="https://via.placeholder.com/150" class="img-fluid" alt="Product 2">
-            </div>
-            <div class="col-md-4">
-              <img src="https://via.placeholder.com/150" class="img-fluid" alt="Product 2">
-            </div>
-          </div>
-        </div>
+        <!-- Add more product blocks as needed -->
       </div>
       <div class="col-lg-4">
         <div class="summary">
-          <h2>Summary</h2>
+          <h4 class="headings">Summary</h4>
           <p>Total Price: $100</p>
           <button>Checkout</button>
         </div>
@@ -51,10 +69,9 @@
     </div>
   </div>
   <!-- Bootstrap JS -->
- 
-    <script type="text/javascript" src="./script.js">
-</script>
-
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
-
 </html>
+
